1st milestone commit

--- a/client/src/pages/Dashboard/SA_Screens/Brand/brand.css
+++ b/client/src/pages/Dashboard/SA_Screens/Brand/brand.css
@@ -85,7 +85,6 @@
 .uploaded-video {
   height: 400px;
   width: 100%;
-  display: flex;
 }
 
 .video-react-video {
@@ -158,4 +157,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.subscript{
+  font-size: 10px;
+  color: var(--primary_color);
 }
