--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,3 +37,12 @@ code {
   align-items: center;
   justify-content: center;
 }
+
+.margin-vertical{
+  margin: 2% 0;
+}
+
+.splash-styling1{
+  width: 100%;
+  height: 50vh;
+}
