--- a/client/src/pages/Dashboard/SA_Screens/Admin/admin.css
+++ b/client/src/pages/Dashboard/SA_Screens/Admin/admin.css
@@ -1,5 +1,7 @@
 :root {
   --primary_color: #583e81;
+  --primary_light: #eee;
+  --primary_dark: #000;
 }
 
 .ca_container {
@@ -58,7 +60,7 @@
 }
 
 .sub-category-chips {
-  background: #eee;
+  background: var(--primary_light);
   display: flex;
   align-items: center;
   padding: 5px 10px;
@@ -70,7 +72,7 @@
 
 ._selected {
   background: var(--primary_color);
-  color: #eee;
+  color: var(--primary_light);
 }
 
 .sub___cat {
@@ -103,3 +105,14 @@
   padding: 10px 0;
 }
 
+.filter-icon{
+  position: absolute;
+  bottom: 18px;
+  right: 10px;
+  color: var(--primary_dark);
+}
+
+.manufacturer_company_name__dropdown{
+  width: 100% !important;
+  background: #000;
+}
