--- a/client/src/index.css
+++ b/client/src/index.css
@@ -38,6 +38,21 @@ code {
   justify-content: center;
 }
 
+.direction-row{
+  display: flex;
+  align-items: center;
+}
+
+.direction-corner{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.wrap-container{
+  flex-wrap: wrap;
+}
+
 .margin-vertical{
   margin: 2% 0;
 }
@@ -45,4 +60,20 @@ code {
 .splash-styling1{
   width: 100%;
   height: 50vh;
+}
+
+.width-100per{
+  width: 100% !important;
+}
+
+.width-80per{
+  width: 80%;
+}
+
+.width-20per{
+  width: 20%;
+}
+
+.margin-0per{
+  margin: 0% !important;
 }
