Changes done for 2nd Milestone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -43,6 +43,11 @@ code {
   align-items: center;
 }
 
+.direction-col{
+  display: flex;
+  flex-direction: column;
+}
+
 .direction-corner{
   display: flex;
   align-items: center;
