--- a/client/src/components/Searchbar/searchbar.css
+++ b/client/src/components/Searchbar/searchbar.css
@@ -27,8 +27,9 @@
   color: var(--primary_light);
 }
 
-.barCont:hover input {
+.barCont:hover input{
   width: 150px;
+  margin-left: .4em;
 }
 
 .barCont input[type="search"]::-webkit-search-cancel-button{
