--- a/client/src/pages/UserPanel/PDPs/features.css
+++ b/client/src/pages/UserPanel/PDPs/features.css
@@ -149,12 +149,12 @@
   background-color: #171a1fff;
   font-size: 1.5rem;
 
-  width: 90%;
+  width: 100%;
   padding: 0.5% 0;
   border-radius: 8px;
   /* font-size: 1.1rem; */
   color: #ffff;
-  margin: 25px 5% 50px;
+  margin: 25px 0 50px;
 }
 
 /* section5 */
@@ -234,10 +234,11 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
+  gap: 5px;
 }
 
-.feature_listing p {
-  width: 50%;
+.feature_listing h6 {
+  width: 49%;
 }
 
 @media (max-width: 993px) {
